--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.8.0",
+    "react-redux": "^8.0.4",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
